<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">惠消费</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--  -->
    <string name="personal_txt1">个人中心</string>
    <string name="personal_txt2">疯狂的搅屎棍</string>
    <string name="personal_txt3">消费历史</string>
    <string name="personal_txt4">积分商城</string>
    <string name="personal_txt5">积分等级</string>
    <string name="personal_txt6">消费中心</string>
    <string name="personal_txt7">有奖推广</string>
    <string name="personal_txt8">关于惠消费</string>
    <!--  -->
    <string name="personal_message_txt1">个人信息</string>
    <string name="personal_message_txt2">头像</string>
    <string name="personal_message_txt4">二维码名片</string>
    <string name="personal_message_txt5">性别</string>
    <string name="personal_message_txt6">男</string>
    <string name="personal_message_txt7">手机号</string>
    <string name="personal_message_txt8">未登录</string>
    <string name="personal_message_txt9">注销</string>
    <!--  -->
    <string name="update_nickname_txt1">昵称修改</string>
    <string name="update_nickname_txt2">完成</string>
    <string name="update_nickname_txt3">请输入新的昵称</string>
    <!--  -->
    <string name="login_txt1">返回</string>
    <string name="login_txt2">请输入手机号码</string>
    <string name="login_txt3">请输入密码</string>
    <string name="login_txt4">记住密码</string>
    <string name="login_txt5">登录</string>
    <string name="login_txt6">注册</string>
    <!--  -->
    <string name="register_txt1">用户注册</string>
    <string name="register_txt2">请输入手机号码</string>
    <string name="register_txt3">请输入密码</string>
    <string name="register_txt4">请确认密码</string>
    <string name="register_txt5">推广码-选填</string>
    <string name="register_txt6">扫描二维码</string>
    <string name="register_txt7">短信验证码</string>
    <string name="register_txt8">获取验证码</string>
    <string name="register_txt9">我已经阅读并接受《用户协议》</string>
    <string name="register_txt10">注册</string>
    <!--  -->
    <string name="contact_txt1">联系我们</string>
    <string name="contact_txt2">公司电话：</string>
    <string name="contact_txt3">000–0000000</string>
    <string name="contact_txt4">公司官网：</string>
    <string name="contact_txt5">www.xxxx.com</string>
    <string name="contact_txt6">公式地址：</string>
    <string name="contact_txt7">xxx省xxx市xx路</string>
    <!--  -->
    <string name="feedback_txt1">意见反馈</string>
    <string name="feedback_txt2">提交</string>
    <string name="feedback_txt3">留下你的宝贵意见</string>
    <string name="feedback_txt4">剩余500字</string>
    <!--  -->
    <string name="about_txt1">关于惠消费</string>
    <string name="about_txt2">版本：1.2.66.8786</string>
    <string name="about_txt3">意见反馈</string>
    <string name="about_txt4">检查更新</string>
    <string name="about_txt5">联系我们</string>
    <string name="about_txt6">用户协议</string>
    <string name="about_txt7">xxxxx网络科技有限公司 版权所有</string>
    <!--  -->
    <string name="push_txt1">有奖推广</string>
    <string name="push_txt2">我的成绩</string>
    <string name="push_txt3">0个</string>
    <string name="push_txt4">已激活用户</string>
    <string name="push_txt5">0个</string>
    <string name="push_txt6">我的推广码：</string>
    <string name="push_txt7">X86X64X5A8Q7</string>
    <!--  -->
    <string name="message_center_txt1">消费中心</string>
    <string name="message_center_txt2">四海一家新开分店，府河旁，尽享6折优惠</string>
    <!--  -->
    <string name="message_detail_txt1">消息详细内容</string>
    <string name="message_detail_txt2">XXXX茶楼5周年庆</string>
    <!--  -->
    <string name="update_phonenum_txt1">手机号码</string>
    <string name="update_phonenum_txt2">修改</string>
    <string name="update_phonenum_txt3">请输入新的手机号码</string>

    
    
    <string name="loadTitle"><strong>正在更新数据</strong></string>
    <string name="loadContent"><strong>请稍候……</strong></string>
	<string name="login_login">登陆</string>
    <string name="login_hint_password">输入密码</string>
    <string name="login_hint_name">输入用户名</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="device_group">设备组</string>
    
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">释放立即刷新</string>
    <string name="header_hint_refresh_loading">刷新中&#8230;</string>
    <string name="header_hint_refresh_time">上次刷新：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放加载更多</string>
    <!--  -->
    <string name="user_protocol">《用户协议》</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <!--登录界面-->
    <string name="login_title">登录</string>
    <string name="register">注册</string>
    <string name="remmber_psd">记住密码?</string>
    <string name="forget_psd">忘记密码？</string>
    <string name="regester_new">注册新用户</string>
    <string name="user_info_title">个人资料</string>
    <string name="user_info_nickname">昵称</string>
    <string name="activity_qrcode_title">二维码名片</string>
    <string name="activity_gender_title">性别</string>
    <string name="gender_man">男</string>
    <string name="gender_woman">女</string>
    <string name="update_psd">修改密码</string>
    <string name="nickname_update">昵称修改</string>
    <string name="person_center">个人中心</string>
    <string name="history_constoms">消费历史</string>
    <string name="push_title">有奖推广</string>
    <string name="adviceback">意见反馈</string>
    <string name="score_level">积分与等级</string>
    <string name="forget_psd_title">忘记密码</string>
    <string name="index_food_str">餐饮</string>
    <string name="index_china_food_str">中餐</string>
    <string name="index_hot_guo_str">火锅</string>
    <string name="index_west_food_str">西餐</string>
    <string name="index_big_dang_str">大排档</string>
    <string name="index_liaoli_str">料理</string>
    <string name="index_gan_guo_str">干锅</string>
    <string name="index_babikou_str">烧烤</string>
    <string name="index_fish_str">海鲜</string>
    <string name="index_special_str">特色餐饮</string>
    <string name="index_food_other_str">其他</string>
    <string name="index_fun_str">娱乐</string>
    <string name="index_ktv_str">KTV</string>
    <string name="index_club_str">会所</string>
    <string name="index_jiubar_str">酒吧</string>
    <string name="index_time_str">休闲</string>
    <string name="index_tea_str">茶楼</string>
    <string name="index_coffe_str">咖啡</string>
    <string name="index_water_bar_str">水吧</string>
    <string name="index_zhuxing_str">住行</string>
    <string name="index_hotel_str">酒店</string>
    <string name="index_life_service_str">生活服务</string>
    <string name="index_apartment_str">公寓</string>
    <string name="menu_near_str">附近</string>
    <string name="menu_person_center_str">个人中心</string>
    <string name="menu_discount_str">优惠资讯</string>
    <string name="person_center_no_location_str">未定位</string>
    <string name="person_center_info_str">个人资料</string>
    <string name="person_center_level_str">积分等级</string>
    <string name="person_center_qrcode_str">二维码</string>
    <string name="person_center_my_wallet_str">我的钱包</string>
    <string name="person_center_wallet_manage_str">钱包管理</string>
    <string name="person_center_history_custom_str">消费历史</string>
    <string name="person_center_history_custom_title_str">进入查看消费历史</string>
    <string name="person_center_user_push_str">有奖推广</string>
    <string  name="person_center_user_push_title_str">推广获得积分</string>
    <string name="person_center_register_str">注销</string>
    <string name="setting_title_str">设置</string>
    <string name="setting_message_setting_str">消息设置</string>
    <string name="setting_advice_str">意见反馈</string>
    <string name="setting_update_str">检查更新</string>
    <string name="setting_clear_cache_str">清除缓存</string>
    <string name="setting_about_us_str">关于惠消费</string>
</resources>