<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imgcontrol="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Indigo_nav_color"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_bg"
            android:gravity="center_vertical"
            android:padding="@dimen/x2" >

            <com.schytd.discount.ui.View.ButtonIcon
                android:id="@+id/btn_back"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x5"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:onClick="onClick"
                app:iconDrawable="@drawable/titlebar_btn_back" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="@dimen/x17" />

            <TextView
                android:id="@+id/activity_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/x5"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/x15" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#39A79E" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x150"
                    android:background="@color/login_bg"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <com.schytd.discount.ui.View.RoundImageView
                        android:id="@+id/login_img"
                        android:layout_width="@dimen/x70"
                        android:layout_height="@dimen/x70"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:scaleType="centerCrop"
                        android:src="@drawable/no_data_icon"
                        imgcontrol:border_inside_color="#fff7f2e9"
                        imgcontrol:border_outside_color="@color/Indigo_nav_color"
                        imgcontrol:border_thickness="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x10"
                    android:background="@drawable/linear_shape"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/activity_login_phonenum"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/y32"
                        android:layout_margin="@dimen/x2"
                        android:background="@drawable/editview_shape"
                        android:gravity="center_vertical"
                        android:hint="@string/login_txt2"
                        android:inputType="text"
                        android:paddingLeft="@dimen/x10"
                        android:singleLine="true"
                        android:textColorHint="#898989"
                        android:textSize="@dimen/x12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#dfdfdf" />

                    <EditText
                        android:id="@+id/activity_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/y32"
                        android:layout_margin="@dimen/x2"
                        android:background="@drawable/editview_shape"
                        android:gravity="center_vertical"
                        android:hint="@string/login_txt3"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/x10"
                        android:singleLine="true"
                        android:textColorHint="#898989"
                        android:textSize="@dimen/x12" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y32"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/x10"
                    android:layout_marginRight="@dimen/x10"
                    android:padding="@dimen/x2"
                    android:background="@drawable/linear_shape" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/x10"
                        android:gravity="center"
                        android:text="@string/remmber_psd"
                        android:textColor="#7F7370"
                        android:textSize="@dimen/x12"
                        />

                    <com.schytd.discount.ui.switchbtn.togglebutton.ToggleButton
                        android:id="@+id/remmber_password"
                        android:layout_width="@dimen/x40"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/x4" />
                </RelativeLayout>

                <Button
                    android:id="@+id/activity_login_btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y35"
                    android:layout_margin="@dimen/x10"
                    android:background="@drawable/btn_selector"
                    android:text="@string/login_txt5"
                    android:textColor="@color/white"
                    android:textColorHint="#898989"
                    android:textSize="@dimen/x15" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:text="@string/forget_psd"
                        android:textColor="@color/Indigo_nav_color"
                        android:textSize="@dimen/x13" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/x5"
                        android:layout_marginRight="@dimen/x5"
                        android:background="@color/Indigo_nav_color" />

                    <TextView
                        android:id="@+id/txt_goto_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:text="@string/regester_new"
                        android:textColor="@color/Indigo_nav_color"
                        android:textSize="@dimen/x13" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/loading_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/progressbar_shape"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录中..."
                android:textColor="#555555" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>