<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Indigo_nav_color"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_bg"
            android:gravity="center_vertical"
            android:padding="@dimen/x2" >

            <com.schytd.discount.ui.View.ButtonIcon
                android:id="@+id/setting_back"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x5"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:onClick="onClick"
                app:iconDrawable="@drawable/titlebar_btn_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/setting_title_str"
                android:textColor="@color/white"
                android:textSize="@dimen/x17" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#39A79E" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40" >

        <com.schytd.discount.ui.View.LayoutRipple
            android:id="@+id/setting_push"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y40"
            android:clickable="true"
            android:descendantFocusability="afterDescendants"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:orientation="horizontal"
            app:before_color="@color/white" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x20"
                android:layout_weight="1"
                android:text="@string/setting_message_setting_str"
                android:textColor="@color/font_color"
                android:textSize="@dimen/x13" />
        </com.schytd.discount.ui.View.LayoutRipple>

        <com.schytd.discount.ui.switchbtn.togglebutton.ToggleButton
            android:id="@+id/setting_push_toggle"
            android:layout_width="@dimen/x40"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="@dimen/x10" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="#C1CAC8" />
    </LinearLayout>

    <com.schytd.discount.ui.View.LayoutRipple
        android:id="@+id/setting_advise"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:before_color="@color/white" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_weight="1"
            android:text="@string/setting_advice_str"
            android:textColor="@color/font_color"
            android:textSize="@dimen/x13" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x20"
            android:src="@drawable/right_icon_1" />
    </com.schytd.discount.ui.View.LayoutRipple>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="#C1CAC8" />
    </LinearLayout>

    <com.schytd.discount.ui.View.LayoutRipple
        android:id="@+id/setting_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:before_color="@color/white" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_weight="1"
            android:text="@string/setting_update_str"
            android:textColor="@color/font_color"
            android:textSize="@dimen/x13" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x20"
            android:src="@drawable/right_icon_1" />
    </com.schytd.discount.ui.View.LayoutRipple>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="#C1CAC8" />
    </LinearLayout>

    <com.schytd.discount.ui.View.LayoutRipple
        android:id="@+id/setting_clear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:before_color="@color/white" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_weight="1"
            android:text="@string/setting_clear_cache_str"
            android:textColor="@color/font_color"
            android:textSize="@dimen/x13" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x20"
            android:text=""
            android:textColor="#666666" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x20"
            android:src="@drawable/right_icon_1" />
    </com.schytd.discount.ui.View.LayoutRipple>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#C1CAC8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/y20"
        android:background="#C1CAC8" />

    <com.schytd.discount.ui.View.LayoutRipple
        android:id="@+id/setting_aboutus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:before_color="@color/white" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_weight="1"
            android:text="@string/setting_about_us_str"
            android:textColor="@color/font_color"
            android:textSize="@dimen/x13" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x20"
            android:src="@drawable/right_icon_1" />
    </com.schytd.discount.ui.View.LayoutRipple>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#C1CAC8" />

</LinearLayout>