<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Indigo_nav_color"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_bg"
            android:padding="@dimen/x2"
            android:gravity="center_vertical" >
            <com.schytd.discount.ui.View.ButtonIcon
                android:id="@+id/gender_btn_back"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x5"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:onClick="onClick"
                app:iconDrawable="@drawable/titlebar_btn_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/activity_gender_title"
                android:textColor="@color/white"
                android:textSize="@dimen/x17" />
            <com.schytd.discount.ui.View.ButtonIcon
                android:id="@+id/gender_update_ok"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_marginRight="@dimen/x5"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:onClick="onClick"
                app:iconDrawable="@drawable/gender_ok"
                />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#39A79E" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/y20"
        android:background="#C1CAC8" />

    <LinearLayout
        android:id="@+id/gender_man"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:background="@drawable/selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/gender_man"
            android:textSize="@dimen/x15" />

        <ImageView
            android:id="@+id/gender_man_checked"
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_marginRight="@dimen/x10"
            android:src="@drawable/gender_icon"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="#C1CAC8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_woman"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:background="@drawable/selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_weight="1"
            android:text="@string/gender_woman"
            android:textSize="@dimen/x15" />

        <ImageView
            android:id="@+id/gender_woman_checked"
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_marginRight="@dimen/x10"
            android:src="@drawable/gender_icon"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#C1CAC8" />

</LinearLayout>